@@ -44,8 +44,7 @@
 
             <!-- Non-typical version patterns. -->
             <additional-filters />
-            <replaceregex pattern="/xercesImpl([^/]+)$" replace="/xercesImpl" flags="gi" />
-    
+
             <!-- Typical version patterns. -->
             <replaceregex pattern="\-(r)?([0-9\-\_\.])+(b(eta)?([0-9\-\.])*)?$" replace="" flags="gi" />
           </filtermapper>
