@@ -257,11 +257,6 @@
 		     />
     </target>
     
-    <target name="dist-maven" depends="jar-core,javadocs,common.dist-maven">
-      <m2-deploy-with-pom-template pom.xml="lib/lucene-xercesImpl-pom.xml.template"
-                                   jar.file="lib/xercesImpl-2.9.1-patched-XERCESJ-1257.jar" />
-    </target>
-
     <target name="compile-test" depends="contrib-build.compile-test">
        <!-- copy .alg files as resources for testing -->
        <copy todir="${build.dir}/classes/test/conf">
