@@ -91,7 +91,6 @@ including, but not limited to:
  - Commons Compress (lib/commons-compress-1.0.jar)
  - Commons Digester (lib/commons-digester-1.7.jar)
  - Commons Logging (lib/commons-logging-1.0.4.jar)
- - Xerces (lib/xercesImpl-2.9.1-patched-XERCESJ-1257.jar)
 
 =========================================================================
 ==  Apache Lucene Analyzers Notice                                     ==
